[package]
name = "logic_mill_rs"
version = "1.0.0"
edition = "2024"

[lib]
name = "logic_mill_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
rustc-hash = "2.1.1"

[dev-dependencies]
criterion = "0.7.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

[[bench]]
name = "turing_benchmark"
harness = false
