[package]
name = "logic_mill_rs"
version = "1.2.5"
edition = "2024"

[lib]
name = "logic_mill_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-pickle = "1.2.0"
slab = { version = "0.4.11", features = ["serde"] }

[dev-dependencies]
criterion = "0.7.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

[[bench]]
name = "turing_benchmark"
harness = false
